fix plot spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,12 +81,16 @@ li a:hover {
   margin-top: 100px;
   color: black;
   margin: auto;
+  justify-content: space-between;
 }
 
 .plot {
   width: 200px;
   height: 200px;
   background-color: white;
+  cursor: pointer;
+  margin: auto;
+  margin-top: 10px;
 }
 
 #plotPopUp {
